# a-share-signal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: current_positions.csv  strategy.toml.example
docs/: architecture-review.md  paper-trading-ops.md
src/ashare_signal/: __init__.py  __main__.py  cli.py  config.py
src/ashare_signal/backtest/: __init__.py  engine.py
src/ashare_signal/data/: repository.py  sync.py  tushare_client.py
src/ashare_signal/domain/: __init__.py  models.py
src/ashare_signal/features/: factors.py  pipeline.py
src/ashare_signal/portfolio/: __init__.py  engine.py  manager.py
src/ashare_signal/report/: render.py
src/ashare_signal/scheduler/: __init__.py  daily.py  jobs.py
src/ashare_signal/strategy/: __init__.py  selector.py  signal_board.py  universe.py
src/ashare_signal/utils/: dates.py
tests/: test_report_render.py  test_selector.py  test_strategy.py  test_universe_pipeline.py
