[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-v1-signal"
version = "0.1.0"
description = "A-share daily signal board skeleton for a 5-position swing strategy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "tushare",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ashare-signal = "ashare_signal.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
